[package]
name = "comcart"
version = "0.1.0"
description = "Common Cartridge file summarization library"
authors = ["Tommy Groshong <tgroshong@instructure.com>"]
repository = "https://github.com/tgroshon/comcart"
keywords = ["common-cartridge", "education"]
readme = "README.md"
license = "MIT"
exclude = [ ".git/*" ]

[lib]
name = "comcart"
path = "src/lib.rs"

[dependencies]
lazy_static = "0.2.0"
regex = "0.1"
xml-rs = "0.3.0"
zip = "0.1.16"
